make landing page look good on tablet and resolve chrome bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,3 +153,7 @@
 .opaque {
 	opacity: 1;
 }
+
+.mdToBlogContainer {
+	height: 500px;
+}
